--- a/GC/templates/GC-template.xml
+++ b/GC/templates/GC-template.xml
@@ -35,29 +35,33 @@
                         <?end?>
                     </vrf>
                     <interface xmlns="http://tail-f.com/ned/cisco-ios-xr">
-                        <GigabitEthernet-subinterface>
-                            <GigabitEthernet>
-                                <id>{/transport-information/options/settings/equipment-information/PE/interface}</id>
-                                <encapsulation>
-                                    <dot1q>
-                                        <vlan-id>{string(/transport-information/options/settings/circuit-information/fttx/vlan/cvlan-id)}</vlan-id>
-                                    </dot1q>
-                                </encapsulation>
-                                <?if {/service-information/network-options/network-protocol = 'vpnv4'}?>
-                                    <vrf>{string(/service-information/network-options/vpnv4/vrf)}</vrf>
-                                <?end?>
-                                <?foreach {/service-information/service-options/ip-settings/ip/ipv4/hosts}?>
-                                    <?if {$device = node}?>
-                                        <ipv4>
-                                            <address>
-                                                <ip>{address}</ip>
-                                                <mask>{subnet-mask}</mask>
-                                            </address>
-                                        </ipv4>
+                        <?for {/transport-information/options/settings/equipment-information/PE/service-interface}?>
+                            <GigabitEthernet-subinterface>
+                                <GigabitEthernet>
+                                    <id>{string(/transport-information/options/settings/equipment-information/PE/service-interface/interface)}</id>
+                                    <?if {/transport-information/options/settings/circuit-information/fttx/encapsulation = 'tagged'}?>
+                                        <encapsulation>
+                                            <dot1q>
+                                                <vlan-id>{string(/transport-information/options/settings/circuit-information/fttx/vlan/cvlan-id)}</vlan-id>
+                                            </dot1q>
+                                        </encapsulation>
                                     <?end?>
-                                  <?end?>
-                            </GigabitEthernet>
-                        </GigabitEthernet-subinterface>
+                                    <?if {/service-information/network-options/network-protocol = 'vpnv4'}?>
+                                        <vrf>{string(/service-information/network-options/vpnv4/vrf)}</vrf>
+                                    <?end?>
+                                    <?foreach {/service-information/service-options/ip-settings/ip/ipv4/hosts}?>
+                                        <?if {$device = node}?>
+                                            <ipv4>
+                                                <address>
+                                                    <ip>{address}</ip>
+                                                    <mask>{subnet-mask}</mask>
+                                                </address>
+                                            </ipv4>
+                                        <?end?>
+                                      <?end?>
+                                </GigabitEthernet>
+                            </GigabitEthernet-subinterface>
+                        <?end?>
                     </interface>
                     <router xmlns="http://tail-f.com/ned/cisco-ios-xr">
                         <bgp>
