--- a/GC/templates/GC-template.xml
+++ b/GC/templates/GC-template.xml
@@ -36,7 +36,7 @@
                             <?end?>
                         </vrf>
                         <interface xmlns="http://tail-f.com/ned/cisco-ios-xr">
-                            <?for {/transport-information/options/settings/equipment-information/PE/service-interface}?>
+                            <?foreach {/transport-information/options/settings/equipment-information/PE/service-interface}?>
                                 <GigabitEthernet-subinterface>
                                     <GigabitEthernet>
                                         <id>{string(/transport-information/options/settings/equipment-information/PE/service-interface/interface)}</id>
@@ -123,7 +123,7 @@
                             <?end?>
                         </vrf>
                         <interface xmlns="urn:ios">
-                            <?for {/transport-information/options/settings/equipment-information/CPE/service-interface}?>
+                            <?foreach {/transport-information/options/settings/equipment-information/CPE/service-interface}?>
                                 <GigabitEthernet>
                                     <name>{string(/transport-information/options/settings/equipment-information/CPE/service-interface/interface)}</name>
                                     <encapsulation>
