--- a/GC/templates/GC-template.xml
+++ b/GC/templates/GC-template.xml
@@ -77,7 +77,9 @@
                                                     <id>{remote-address}</id>
                                                     <remote-as>{remote-asn}</remote-as>
                                                     <update-source>
-                                                      <GigabitEthernet>{update-source}</GigabitEthernet>
+                                                        <GigabitEthernet-subinterface>
+                                                            <GigabitEthernet>{update-source}</GigabitEthernet>
+                                                        </GigabitEthernet-subinterface>
                                                     </update-source>
                                                     <address-family>
                                                       <ipv4>
