--- a/GC/templates/GC-template.xml
+++ b/GC/templates/GC-template.xml
@@ -206,6 +206,9 @@
                                             <address-family>
                                                 <ipv4>
                                                     <af>unicast</af>
+                                                    <redistribute>
+                                                        <connected/>
+                                                    </redistribute>
                                                     <neighbor>
                                                         <id>{remote-address}</id>
                                                         <activate/>
